# phitter-kernel

./: .gitignore  LICENSE  README.md  SIMULATION.md  pyproject.toml  requirements.txt
.github/workflows/: unittest.yml
AD-Marsaglia/ADinf/: ADinf.c
AD-Marsaglia/AnDarl/: AnDarl.c
ad_marsaglia/: AnDarl.py
ad_marsaglia/ADinf/: ADinf.c  gmon.out
ad_marsaglia/AnDarl/: AnDarl.c  gmon.out
animations/data/: data_alpha.txt  data_exponential.txt  data_power_function.txt  data_triangular.txt
animations/excel_files/: data_alpha.xlsx  data_exponential.xlsx  data_gumbel_left.xlsx  data_inverse_gamma.xlsx  data_johnson_sb.xlsx  data_reciprolcal.xlsx  (+2 more)
api_documentation/: conf.py  index.rst  phitter.continuous.continuous_distributions.rst  phitter.discrete.discrete_distributions.rst  phitter.discrete.discrete_measures.rst  phitter.discrete.rst  phitter.rst  phitter.simulation.own_distribution.rst
continuous/: graph.ipynb  graph.py  measurements__.py  test_anderson_darling.py  test_anderson_darling_continuous.py  test_chi_square.py  test_chi_square_continuous.py  test_kolmogorov_smirnov.py  test_kolmogorov_smirnov_continuous.py
discrete/: graph.py  measurements__.py  test_anderson_darling.py  test_chi_square.py  test_chi_square_discrete.py  test_kolmogorov_smirnov.py  test_kolmogorov_smirnov_discrete.py
documentation/: FIT.md
examples/: fit_accelerate.ipynb  fit_continuous_college.ipynb  fit_continuous_iris.ipynb  fit_continuous_ncdb.ipynb  fit_continuous_winequality.ipynb  fit_discrete_galton_board.ipynb  fit_discrete_warpbraks.ipynb  fit_specific_distribution.ipynb  working_distribtuion.ipynb  working_distribution.ipynb
paper/: paper.bib  paper.md
phitter/: __init__.py  main.py  phitter.py
pyodide_test/: pyodideTest.js
script-files/: beta_template.xlsx  functions.xlsx  gamma_template.xlsx  integral.xlsx
tests/: anderson_darling.ipynb  chi_square.ipynb  graph.ipynb  kolmogorov_smirnov.ipynb  mse.ipynb  test.ipynb  test.xlsx  test_dict.ipynb
utilities/: ad_marsaglia.py  danoes.py  entropy.py  graph.py  integrate_quad.py  kde.py  mode.ipynb  mode.py  num_bins.ipynb  scipy_distributions.py  shimazaki_shinimoto.ipynb  test.py  write_ppf.py
(+978 files in other folders)
